@@ -3,6 +3,7 @@ Changes in 1.3:
 - Revamp DHT code and follow spec more closely on routing table
 - Revamp SingleFileCache, MultiFileCache and data preallocation
 - Webseeds now follow connection limits (184941)
+- Add new SignalCatcher class to handle UNIX signals (296835)
 
 Changes in 1.2.1:
 - Fix deadlock in webseeding code (295719)
